base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: workshop-app
    component: app
spec:
  selector:
    app: workshop-app
    component: app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
