base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: workshop-app
    component: db
spec:
  selector:
    app: workshop-app
    component: db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
