base/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app
  labels:
    app: workshop-app
    component: app
spec:
  to:
    kind: Service
    name: app
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
